--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "md-links",
   "version": "0.1.0",
   "dependencies": {
+    "chalk": "^3.0.0",
     "eslint": "^6.8.0",
     "file-system": "^2.2.2",
     "marked": "^0.8.0",
