--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint": "^6.8.0",
     "file-system": "^2.2.2",
     "marked": "^0.8.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "node-render": "^1.1.1"
   }
 }
